<resources>
    <string name="app_name">FoodCourtApp Merchant</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome</string>
    <string name="welcome2">Eat and Drink\nHowever You Like</string>
    <string name="welcome3">With FoodCourt App, top up your\nFoodCourt Card, anywhere and\nanytime. Make it yours</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="no_account">I don\'t have an account yet</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Re-Enter Password</string>
    <string name="continue_text">Continue</string>
    <string name="balance">Balance</string>
    <string name="kartu_makan_jkt">Kartu Makan JKT</string>
    <string name="rp">Rp. </string>
    <string name="saldo_value">...........</string>
    <string name="hello">Hello,</string>
    <string name="exclamation">!</string>
    <string name="pay">Pay</string>
    <string name="history">History</string>
    <string name="more">More</string>
    <string name="card">Card</string>
    <string name="see_history">See History</string>
    <string name="receipt">Receipt</string>
    <string name="pesanan">Pesanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_total">Harga Total</string>
    <string name="food">Food</string>
    <string name="x">x</string>
    <string name="total">Total</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="pin">Pin</string>
    <string name="enter_pin">Enter your 6-digit pin</string>
    <string name="success">Success!</string>
    <string name="thanks_paying">Thank you for paying</string>
    <string name="go_home">Go Back Home</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank">Bank</string>
    <string name="gopay">GoPay</string>
    <string name="ovo">OVO</string>
    <string name="linkaja">LinkAja</string>
    <string name="dana">Dana</string>
    <string name="topup">Top Up</string>
    <string name="transaction_history">Transaction History</string>
    <string name="scan">Scan QR</string>
    <string name="payment">Payment</string>
    <string name="business">Business</string>
    <string name="location">Location</string>
    <string name="withdraw">Withdraw</string>
    <string name="store">Store</string>
    <string name="_1_enter_your_desired_nominal">1. Enter your desired nominal</string>
    <string name="_2_choose_your_bank_destination">2. Choose your bank destination</string>
    <string name="_3_enter_your_bank_account">3. Enter your bank account</string>
    <string name="bank_account">Bank Account</string>
    <string name="confirmation">Confirmation</string>
    <string name="admin_fee">Admin Fee</string>
    <string name="bank_name">Bank Name</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="wallet">wallet</string>
    <string name="withdrawal_success">Withdrawal Success!</string>
    <string name="thank_you_and_keep_going">Thank you and keep going</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="transaction">Transaction</string>
    <string name="logout">Logout</string>
    <string name="blank">......</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="kampus_ipb">Kampus IPB</string>
    <string name="withdraws_history">Withdraws History</string>
    <string name="fees">1000</string>
</resources>