<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".WithdrawActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_bank"
        android:text="@string/bank"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_1_withdraw"
        android:text="@string/_1_enter_your_desired_nominal"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bank"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_value"
        app:layout_constraintTop_toBottomOf="@id/tv_1_withdraw"
        android:hint="@string/rp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_2_withdraw"
        android:text="@string/_2_choose_your_bank_destination"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_value"
        android:layout_marginTop="10dp" />
    
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_bank"
        app:layout_constraintTop_toBottomOf="@id/tv_2_withdraw" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_3_withdraw"
        android:text="@string/_3_enter_your_bank_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_bank"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_bank_account"
        app:layout_constraintTop_toBottomOf="@id/tv_3_withdraw"
        android:hint="@string/bank_account"
        android:gravity="center" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_withdraw"
        android:text="@string/continue_text"
        android:background="@drawable/custom_edt"
        android:textAllCaps="false"
        android:backgroundTint="@color/secondary_red"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edt_bank_account"
        android:layout_marginTop="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>