<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".layout.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hello"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hello"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        style="@style/text_style"
        android:layout_marginStart="11dp"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_hello"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_exclamation"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        android:text="@string/exclamation"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:id="@+id/cardMenu"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/primary_red"
        app:cardCornerRadius="25dp" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_balance"
                android:text="@string/balance"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="17dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_business"
                android:text="@string/business"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_balance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_location"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/location"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_business" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saldo"
                android:text="@string/saldo_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_rp"
                android:text="@string/rp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                app:layout_goneMarginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/saldo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn_withdraw"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/withdraw"
                android:fontFamily="@font/poppins_regular"
                android:textAllCaps="false"
                android:background="@drawable/btn_radius"
                android:backgroundTint="@color/beige"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                android:layout_marginTop="30dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_history"
        android:text="@string/history"
        style="@style/text_style"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cardMenu"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_more"
        android:text="@string/more"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cardMenu"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/progress_bar_style"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>